[gd_scene load_steps=7 format=3 uid="uid://dxb0xr6s474ob"]

[ext_resource type="Theme" uid="uid://bcvvqrqeokira" path="res://barkley2/themes/cc.tres" id="1_3mo5f"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_gender.gd" id="2_gr8ie"]
[ext_resource type="Texture2D" uid="uid://c62b8wbaiwg16" path="res://barkley2/assets/b2_original/images/cc/s_cc_gender_frames_0.png" id="3_5njeg"]
[ext_resource type="Texture2D" uid="uid://kbawn4ara4kf" path="res://barkley2/assets/b2_original/images/cc/s_cc_gender_portrait_frames_0.png" id="4_iyse3"]
[ext_resource type="Texture2D" uid="uid://b7f0orkkaro4" path="res://barkley2/assets/b2_original/images/cc/s_cc_button_accept_0.png" id="5_jixjg"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="6_yhw4q"]

[node name="cc_gender" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3mo5f")
script = ExtResource("2_gr8ie")

[node name="gender_bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="gender_frame_bg" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 54.0
offset_right = 206.0
offset_bottom = 190.0
color = Color(0.235, 0, 0.353, 0.5)

[node name="gender_frame_bg2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 54.0
offset_right = 302.0
offset_bottom = 190.0
color = Color(0.235, 0, 0.353, 0.5)

[node name="gender_frame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -80.0
offset_right = 28.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5njeg")

[node name="gender_image_frame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -80.0
offset_right = 116.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_iyse3")

[node name="gender_image" type="TextureRect" parent="gender_image_frame"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="gender_image_mod" type="TextureRect" parent="gender_image_frame"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="accept_btn_bg" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 200.0
offset_right = 222.0
offset_bottom = 220.0
color = Color(0.235, 0, 0.353, 0.5)

[node name="accept_btn" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 74.0
offset_right = 40.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_jixjg")

[node name="accept_lbl" type="Label" parent="accept_btn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_yhw4q")
text = "Accept"
horizontal_alignment = 1
vertical_alignment = 1
